# weirlang

./: .gitignore  .lsp.json  CLAUDE.md  Cargo.toml  Justfile  LICENSE  README.md  code-review.md  demo-raytracer.weir  flake.nix
.claude-plugin/: marketplace.json  plugin.json
crates/weir-ast/: Cargo.toml
crates/weir-ast/src/: lib.rs  tco.rs
crates/weir-cli/: Cargo.toml
crates/weir-cli/src/: main.rs
crates/weir-cli/tests/: cli.rs
crates/weir-codegen/: Cargo.toml
crates/weir-codegen/src/: aot.rs  dev_session.rs  jit_helpers.rs  lib.rs
crates/weir-interp/: Cargo.toml
crates/weir-interp/src/: lib.rs
crates/weir-lexer/: Cargo.toml
crates/weir-lexer/src/: lib.rs
crates/weir-lsp/: Cargo.toml
crates/weir-lsp/src/: completion.rs  definition.rs  diagnostics.rs  document.rs  expand.rs  formatting.rs  hover.rs  index.rs  inlay_hints.rs  lib.rs  semantic_tokens.rs  server.rs  signature_help.rs  symbols.rs  workspace.rs
crates/weir-macros/: Cargo.toml
crates/weir-macros/src/: builtins.rs  expander.rs  hygiene.rs  lib.rs  sexpr.rs
crates/weir-parser/: Cargo.toml
crates/weir-parser/src/: lib.rs
crates/weir-parser/src/snapshots/: weir_parser__tests__error_bad_param_list.snap  weir_parser__tests__error_bad_variant_in_deftype.snap  weir_parser__tests__error_bare_token.snap  weir_parser__tests__error_defn_no_params.snap  weir_parser__tests__error_empty_input.snap  weir_parser__tests__error_empty_parens_in_expr.snap  weir_parser__tests__error_incomplete_defn.snap  weir_parser__tests__error_invalid_character.snap  weir_parser__tests__error_multiple_errors.snap  weir_parser__tests__error_unclosed_nested.snap  weir_parser__tests__error_unclosed_paren.snap  weir_parser__tests__error_unexpected_close_paren.snap  weir_parser__tests__error_unexpected_token_in_expr.snap  weir_parser__tests__parse_cond.snap  weir_parser__tests__parse_defclass.snap  weir_parser__tests__parse_defn_no_types.snap  weir_parser__tests__parse_defstruct.snap  weir_parser__tests__parse_deftype.snap  weir_parser__tests__parse_if.snap  weir_parser__tests__parse_import.snap  weir_parser__tests__parse_instance.snap  weir_parser__tests__parse_lambda.snap  weir_parser__tests__parse_let.snap  weir_parser__tests__parse_match.snap  weir_parser__tests__parse_mut_let.snap  weir_parser__tests__parse_named_args.snap  weir_parser__tests__parse_pub.snap  weir_parser__tests__parse_simple_defn.snap  weir_parser__tests__parse_spawn.snap  weir_parser__tests__parse_swap_bang.snap  weir_parser__tests__parse_threading.snap  weir_parser__tests__parse_try_operator.snap  weir_parser__tests__parse_vector_map.snap  weir_parser__tests__parse_with_arena.snap  weir_parser__tests__parse_with_tasks.snap
crates/weir-pkg/: Cargo.toml
crates/weir-pkg/src/: error.rs  lib.rs  manifest.rs  resolve.rs  validate.rs
crates/weir-runtime/: Cargo.toml
crates/weir-runtime/src/: lib.rs
crates/weir-typeck/: Cargo.toml
crates/weir-typeck/src/: .lib.rs.pending-snap  checker.rs  defs.rs  error.rs  lib.rs  result.rs  tests.rs  types.rs
crates/weir-wasm/: Cargo.toml
crates/weir-wasm/src/: emit.rs  glue.rs  lib.rs  runtime.rs  types.rs
demos/: tetris.weir  tetris_gl.weir
demos/tetris/: .gitignore  tetris.weir  weir.pkg
design/: advguild-port.md  concurrency.md  execution-model.md  future-work.md  implementation-plan.md  lsp-status.md  macro-system.md  memory-management.md  open-questions.md  packages.md  philosophy.md  syntax.md  testing-plan.md  type-system.md  wasm-backend.md
design/archive/: implementation-plan-phases-0-10.md
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/public/tetris/: app.wasm  gl_bridge.js  loader.js  runtime.js
docs/src/components/: Banner.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: compilation-pipeline.mdx  live-reloading.mdx  memory-model.mdx  package-system.mdx  type-inference.mdx
docs/src/content/docs/getting-started/: cli-reference.mdx  hello-world.mdx  installation.mdx  introduction.mdx
docs/src/content/docs/guide/: control-flow.mdx  data-types.mdx  error-handling.mdx  functions.mdx  macros.mdx  pattern-matching.mdx  structs-types.mdx  syntax.mdx  typeclasses.mdx
docs/src/content/docs/interop/: c-ffi.mdx  native-libraries.mdx  rust.mdx  wasm.mdx
docs/src/content/docs/reference/: grammar.mdx  operators.mdx  reserved-words.mdx
docs/src/content/docs/stdlib/: builtins.mdx  collections.mdx  io.mdx  strings.mdx
docs/src/pages/: tetris.astro
examples/: arena_demo.weir  generics_codegen_demo.weir  generics_demo.weir  strings_demo.weir
examples/cross_file_lsp/: README.md  main.weir  math.weir  types.weir
fuzz/: Cargo.toml
fuzz/fuzz_targets/: parse.rs
libs/: gl_helper.c
std/: prelude.weir
tests/fixtures/: cffi.weir  closures.weir  codegen-arithmetic.weir  codegen-control-flow.weir  codegen-functions.weir  codegen-let-mutation.weir  data-structures.weir  defglobal.weir  dev-reload-demo.weir  factorial.weir  fibonacci.weir  for-loops.weir  gc-strings.weir  macros.weir  milestone0-demo.weir  result.weir  strings.weir  struct-field-mutation.weir  structs.weir  syntax-showcase.weir  target-forms.weir  tco.weir  typeclasses-from.weir  typeclasses-ord-custom.weir  typeclasses-ord.weir  typeclasses.weir  vectors.weir
tests/fixtures/pkg-app/: app.weir  weir.pkg
tests/fixtures/pkg-bad-import/: bad.weir  weir.pkg
tests/fixtures/pkg-lib/: lib.weir  weir.pkg
tests/fixtures/type-errors/: mismatched-return.weir  non-exhaustive-match.weir  unknown-variable.weir
tree-sitter-weir/: Cargo.toml  grammar.js  package.json
tree-sitter-weir/bindings/rust/: build.rs  lib.rs
tree-sitter-weir/queries/: highlights.scm
tree-sitter-weir/src/: grammar.json  node-types.json  parser.c
tree-sitter-weir/test/corpus/: comments.txt  definitions.txt  expressions.txt  literals.txt
