[workspace]
resolver = "2"
members = [
    "crates/weir-lexer",
    "crates/weir-parser",
    "crates/weir-ast",
    "crates/weir-typeck",
    "crates/weir-interp",
    "crates/weir-codegen",
    "crates/weir-macros",
    "crates/weir-lsp",
    "crates/weir-cli",
]
exclude = [
    "tree-sitter-weir",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
# Lexer
logos = "0.15"

# AST infrastructure
la-arena = "0.3"
smol_str = "0.3"

# Error reporting
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# Testing
insta = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Codegen
cranelift-codegen = "0.128"
cranelift-frontend = "0.128"
cranelift-jit = "0.128"
cranelift-module = "0.128"
cranelift-native = "0.128"
cranelift-object = "0.128"
target-lexicon = "0.13"
notify = "7"

# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-std"] }
serde_json = "1"

# Internal crates
weir-lexer = { path = "crates/weir-lexer" }
weir-parser = { path = "crates/weir-parser" }
weir-ast = { path = "crates/weir-ast" }
weir-typeck = { path = "crates/weir-typeck" }
weir-interp = { path = "crates/weir-interp" }
weir-codegen = { path = "crates/weir-codegen" }
weir-macros = { path = "crates/weir-macros" }
weir-lsp = { path = "crates/weir-lsp" }
