[package]
name = "tree-sitter-weir"
description = "Weir grammar for the tree-sitter parsing library"
version = "0.1.0"
keywords = ["incremental", "parsing", "weir"]
categories = ["parsing", "text-editors"]
edition = "2021"
authors = ["Nathan Weir <nathan.weir@protonmail.com>"]
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[dev-dependencies]
tree-sitter = "0.25"

[build-dependencies]
cc = "1.0"
