[package]
name = "weir-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "weir"
path = "src/main.rs"

[dependencies]
weir-lexer.workspace = true
weir-parser.workspace = true
weir-ast.workspace = true
weir-typeck.workspace = true
weir-interp.workspace = true
weir-codegen.workspace = true
weir-macros.workspace = true
weir-lsp.workspace = true
weir-pkg.workspace = true
weir-wasm.workspace = true
clap.workspace = true
smol_str.workspace = true
libc = "0.2"
miette = { workspace = true, features = ["fancy"] }
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
