[package]
name = "weir-codegen"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
weir-ast.workspace = true
weir-typeck.workspace = true
weir-parser.workspace = true
weir-runtime.workspace = true
smol_str.workspace = true
la-arena.workspace = true
cranelift-codegen.workspace = true
cranelift-frontend.workspace = true
cranelift-jit.workspace = true
cranelift-module.workspace = true
cranelift-native.workspace = true
cranelift-object.workspace = true
target-lexicon.workspace = true
notify.workspace = true

[dev-dependencies]
weir-parser.workspace = true
weir-interp.workspace = true
weir-macros.workspace = true
insta.workspace = true
proptest.workspace = true
