[package]
name = "weir-interp"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
weir-ast.workspace = true
smol_str.workspace = true
libc = "0.2"
libffi = "4"

[dev-dependencies]
weir-parser.workspace = true
weir-macros.workspace = true
insta.workspace = true
proptest.workspace = true
