[package]
name = "weir-lsp"
version.workspace = true
edition.workspace = true

[dependencies]
weir-lexer.workspace = true
weir-parser.workspace = true
weir-ast.workspace = true
weir-typeck.workspace = true
weir-macros.workspace = true
tower-lsp.workspace = true
tokio.workspace = true

[dev-dependencies]
insta.workspace = true
