[package]
name = "weir-lsp"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
weir-lexer.workspace = true
weir-parser.workspace = true
weir-ast.workspace = true
weir-typeck.workspace = true
weir-macros.workspace = true
weir-pkg.workspace = true
tower-lsp.workspace = true
tokio.workspace = true
serde_json.workspace = true
smol_str.workspace = true

[dev-dependencies]
insta.workspace = true
