[package]
name = "weir-wasm"
version.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
weir-ast.workspace = true
weir-typeck.workspace = true
wasm-encoder = "0.225"
smol_str.workspace = true
thiserror.workspace = true

[dev-dependencies]
insta.workspace = true
wasmparser = "0.225"
weir-parser.workspace = true
weir-macros.workspace = true
